update poms and application.properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=api
+
+# Do NOT modify database
+spring.jpa.hibernate.ddl-auto=none
+
+# Hibernate generates schema.sql from metadata
+spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.action=create
+spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.create-target=src/main/resources/schema.sql
+spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.create-source=metadata
+
+# DB dialect (PostgreSQL example)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional for logging SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
