add basic user classes to domain and business modules

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,6 +43,7 @@
       <optional>true</optional>
     </dependency>
 
+    <!-- This is also managed by spring.boot dependency in parent pom -->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
