--- a/business/pom.xml
+++ b/business/pom.xml
@@ -19,6 +19,12 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.bearclawvisions.domain</groupId>
+      <artifactId>domain</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
