initial test of DI from business module to api module.

--- a/business/pom.xml
+++ b/business/pom.xml
@@ -21,8 +21,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.bearclawvisions.domain</groupId>
+      <groupId>com.bearclawvisions</groupId>
       <artifactId>domain</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
