--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,13 +3,8 @@ spring.application.name=api
 # Do NOT modify database
 spring.jpa.hibernate.ddl-auto=none
 
-# Hibernate generates schema.sql from metadata
-spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.action=create
-spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.create-target=src/main/resources/schema.sql
-spring.jpa.properties.hibernate.hbm2ddl.schema_generation.scripts.create-source=metadata
-
-# DB dialect (PostgreSQL example)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# DB dialect (PostgreSQL), Spring startup says redundant
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Optional for logging SQL
 spring.jpa.show-sql=true
@@ -18,3 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+# DevTools, set to false in production
+spring.devtools.add-properties=true
+
+# Logging
+logging.level.web=DEBUG
