--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
         <artifactId>jakarta.persistence-api</artifactId>
         <version>3.2.0</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+      <dependency>
+        <groupId>com.auth0</groupId>
+        <artifactId>java-jwt</artifactId>
+        <version>4.5.0</version>
+      </dependency>
 
       <!-- Testing -->
       <dependency>
