--- a/api/pom.xml
+++ b/api/pom.xml
@@ -23,6 +23,10 @@
       <groupId>com.bearclawvisions</groupId>
       <artifactId>business</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.bearclawvisions</groupId>
+      <artifactId>domain</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -39,6 +43,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-webmvc</artifactId>
+    </dependency>
+
+    <!-- Swagger -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     </dependency>
 
     <dependency>
