--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=api
 
+# set base path for api
+server.servlet.context-path=/api
+
+# Allow spring to load env vars automatically
+# spring.config.import=optional:file:.env[.properties]
+
 # Do NOT modify database
 spring.jpa.hibernate.ddl-auto=none
 
 # DB dialect (PostgreSQL), Spring startup says redundant
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Optional for logging SQL
 spring.jpa.show-sql=true
