put env vars in .env and load in yaml config

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: "api"
+  config:
+    import: optional:file:.env[.properties]
   jpa:
     hibernate:
       ddl-auto: none # Do NOT modify database
