--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,11 @@
       </dependency>
 
       <!-- Testing -->
+      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>3.8.1</version>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>6.0.1</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
